--- a/spock-report/src/main/resources/css/style.css
+++ b/spock-report/src/main/resources/css/style.css
@@ -18,4 +18,22 @@ li.element.collapsed {
   list-style-image: url(../img/glyphicons_circle_plus_small.png);
 }
 
+.results.passed {
+  float: left;
+  width: 1em;
+  color: #468847;
+}
+
+.results.failed {
+  float: left;
+  width: 1em;
+  color: #B94A48;
+}
+
+.results.skipped {
+  float: left;
+  width: 1em;
+  color: #F89406;
+}
+
 
