--- a/spock-report/src/main/resources/css/report.css
+++ b/spock-report/src/main/resources/css/report.css
@@ -1,12 +1,16 @@
 body {
-  padding: 40px;
+  padding: 55px;
 }
 
-.label {
-  vertical-align: middle;
+h1 {
+  text-align: center;
 }
 
-li.element {
+ul.packages {
+  padding-top: 2em;
+}
+
+li {
   list-style-image: none;
 }
 
@@ -18,9 +22,48 @@ li.element.collapsed {
   list-style-image: url(../img/glyphicons_circle_plus_small.png);
 }
 
-.results.label {
-  width: 1em;
-  text-align: center;
+pre {
+  white-space: pre;
+  word-wrap: normal;
+  overflow-x: auto;
 }
+
+a, a:hover {
+  color: #000000;
+}
+
+.specElement.passed > .elementHeader > .elementName {
+  color: #468847;
+}
+
+.specElement.failed > .elementHeader > .elementName {
+  color: #B94A48;
+}
+
+.specElement.skipped > .elementHeader > .elementName {
+  color: #d3d3d3;
+}
+
+.label {
+  vertical-align: middle;
+}
+
+.pieContainer {
+  vertical-align: sub;
+}
+
+.popover {
+  width: auto;
+}
+
+.popover-title:empty {
+  display: none;
+}
+
+
+
+
+
+
 
 
